--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,13 @@ hr {
   height: 0.0625rem;
 }
 
+#quality-ingredients {
+  height: 12.5rem;
+  background: url("../img/promo/katie-smith-104748-cropped.jpg") no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 .aw-hr-short {
   margin-top: 0;
   height: 0.18rem;
@@ -10,10 +17,55 @@ hr {
   width: 11.25rem;
 }
 
-/* Media */
+.aw-vertical-align {
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 12.5rem;
+}
 
+.aw-border {
+  border-top: 0.18rem white solid;
+  border-bottom: 0.18rem white solid;
+  padding: 1rem;
+  margin: 2rem;
+  font-size: 1.5rem;
+}
+
+/* Media */
 @media (min-width: 1200px) {
   .container-fluid {
     max-width: 1140px;
+  }
+  .aw-row-override {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+}
+
+@media (min-width: 576px) {
+  #quality-ingredients {
+    height: 18.75rem;
+  }
+  .aw-vertical-align {
+    height: 18.75rem;
+  }
+  .aw-border {
+    padding: 1.5rem;
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .aw-wrapper {
+    padding: 0 10%;
+  }
+  #quality-ingredients {
+    height: 25rem;
+  }
+  .aw-vertical-align {
+    height: 25rem;
+  }
+  .aw-border {
+    padding: 2rem;
+    font-size: 3rem;
   }
 }
